lang/tests/snapshots/diagnostics/parse_error_missing_typevar_name.snap
---
source: lang/tests/diagnostics.rs
---
error: unexpected ':' while parsing this generic parameters
   ╭─[ test.zippel:1:6 ]
   │
 1 │ fn f<: Field>(instance a: F) -> F { a }
   │      ┬  
   │      ╰── found ':', expected '>'
   │      │  
   │      ╰── while parsing this generic parameters
───╯
