lang/tests/snapshots/diagnostics/parse_error_recovery_multiple.snap
---
source: lang/tests/diagnostics.rs
---
warning: no proto declaration found
   ╭─[ test.zippel:1:1 ]
   │
 1 │ ╭───▶ fn f<: Field>(instance a: F) -> F { a }
   │ │     ▲                                         
   │ │ ╭───╯                                         
   ┆ ┆ ┆   
 3 │ ├─│ ▶ fn h<: Field>(instance a: F) -> F { a }
   │ │ │                                         ▲  
   │ ╰────────────────────────────────────────────── every file should contain at least one proto declaration
   │   │                                         │  
   │   ╰─────────────────────────────────────────┴── help: add a `proto` declaration to this file
───╯

---
error: unexpected ':' while parsing this generic parameters
   ╭─[ test.zippel:1:6 ]
   │
 1 │ fn f<: Field>(instance a: F) -> F { a }
   │      ┬  
   │      ╰── found ':', expected '>'
   │      │  
   │      ╰── while parsing this generic parameters
───╯

---
error: unexpected ':' while parsing this generic parameters
   ╭─[ test.zippel:3:6 ]
   │
 3 │ fn h<: Field>(instance a: F) -> F { a }
   │      ┬  
   │      ╰── found ':', expected '>'
   │      │  
   │      ╰── while parsing this generic parameters
───╯
