lang/tests/snapshots/diagnostics/unbound_size_var.snap
---
source: lang/tests/diagnostics.rs
---
error: unbound size variable `N`
   ╭─[ test.zippel:1:19 ]
   │
 1 │ proto p<F: Field>(instance a: [F; N]) where a == a { }
   │                   ─────────┬────────  
   │                            ╰────────── `N` is not declared as a type variable
   │                            │          
   │                            ╰────────── help: add `N: Size` to the type variable list
───╯
